--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,6 @@ on:
     types: [ closed ]
     branches:
       - 'main'
-      - 'develop'
       - '[0-9]+.[0-9]+'
 
 jobs:
@@ -40,7 +39,7 @@ jobs:
 
   release:
     needs: [ lint-js ]
-    if: ${{ github.event.pull_request.merged == true && github.ref != 'refs/heads/develop' }}
+    if: ${{ github.event.pull_request.merged }}
     name: Release
     runs-on: ubuntu-latest
     steps:
